# lock-hog

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: run-tests.yml  tests.yml  type-check.yml
requirements/: dev.txt
src/lock_hog/: __init__.py  hog_lock.py  lock_hogger.py
src/lock_hog/asynchronous/: __init__.py  async_hog_lock.py  async_lock_hogger.py
src/lock_hog/parallel/: __init__.py  hog_lock.py
tests/: test_hog_lock.py
tests/asynchronous/: test_async_hog_lock.py
tests/parallel/: test_hog_lock.py
